app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    ingress.vke.volcengine.com/listen-ports: '[{"TCP": 443},{"TCP": 80}]' # 选择多监听器，包括监听协议和端口号
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - nginx.bobdev.link
    secretName: bobdev-link-wildcard  # 引用上面创建的Secret
  rules:
  - host: nginx.bobdev.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
